fixed image stretching in flexbox

--- a/styles.css
+++ b/styles.css
@@ -24,14 +24,15 @@ body {
     }
     .info {
         font-size: 0.8rem;
-        text-align: center;
+        align-items: center;
+        margin-left: -30px ;
     }
     .info a {
         font-size: 0.8rem;
-        
     }
     .picture{
         max-width: 100%;
+        text-align: center;
     }
   }
 
@@ -50,7 +51,7 @@ body {
    text-align: center;
    font-weight: bold;
    flex: 50%;
-   font-weight: bold;
+   align-items: center;
 
 }
 
